# aws-commerce-intelligence-platform

./: .coveragerc  .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  pytest.ini
databricks/bronze/: 01_load_ecommerce_bronze.py  02_load_pharmacy_bronze.py  03_load_marketplace_bronze.py
databricks/eda/: eda_01_ecommerce.py  eda_02_pharmacy.py  eda_03_marketplace.py  eda_04_cross_domain.py
databricks/export/: 19_export_acip_tables.py
databricks/gold/: 08_dim_date.py  09_dim_geography.py  10_dim_product.py  11_dim_customer.py  12_dim_seller.py  13_fact_transactions.py  14_fact_inventory_snapshots.py  15_fact_seller_performance.py  16_agg_daily_domain_metrics.py  17_agg_customer_segments.py  18_gold_quality_validation.py
databricks/setup/: 00_create_schemas.py
databricks/silver/: 04_ecommerce_silver_transform.py  05_pharmacy_silver_transform.py  06_marketplace_silver_transform.py  07_load_s3_events_silver.py
dbt/: dbt_project.yml
dbt/macros/: clv_segment.sql  generate_surrogate_key.sql  sla_breach_rate.sql  stock_urgency.sql
dbt/models/: acip_gold.yml  schema.yml
dbt/tests/: schema.yml
fastapi/: main.py
fastapi/database/: __init__.py  dynamodb.py  postgres.py
fastapi/models/: __init__.py  ecommerce.py  marketplace.py  pharmacy.py  platform.py
fastapi/routers/: ecommerce.py  marketplace.py  pharmacy.py  platform.py
fastapi/services/: __init__.py  ecommerce_service.py  marketplace_service.py  pharmacy_service.py  platform_service.py
prefect/: master_pipeline.py  stage1_streaming.py  stage2_archive.py  stage3_silver.py  stage4_gold_dbt.py  stage5_serving.py
scripts/utils/: download_acip_tables.py  fix_acip_postgres_types.py  load_acip_postgres.py  sync_s3_to_databricks.py
terraform/: main.tf  outputs.tf  variables.tf
(+57 files in other folders)
