[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-commerce-intelligence-platform"
version = "1.0.0"
description = "AWS Commerce Intelligence Platform - Multi-Domain Operational Intelligence"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "psycopg2-binary>=2.9.9",
    "SQLAlchemy>=2.0.28",
    "boto3>=1.34.69",
    "confluent-kafka>=2.3.0",
    "fastavro>=1.9.0",
    "apache-flink>=1.18.1",
    "dbt-core>=1.7.0",
    "dbt-databricks>=1.7.0",
    "databricks-sdk>=0.20.0",
    "databricks-sql-connector>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "prefect>=2.19.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "fastapi*"]

[tool.ruff]
extend-ignore = ["E402"]
exclude = ["data/", "docs/", ".terraform/"]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "regression: Regression tests",
    "performance: Performance tests",
    "schema: Schema validation tests",
    "kafka: Kafka and Redpanda integration tests",
    "flink: Flink job tests",
    "database: Database tests",
    "aws: AWS service tests",
    "generator: Data generator tests",
    "api: FastAPI endpoint tests",
    "data_quality: Data quality tests",
    "data_flow: Data flow tests",
]
